Updated HTML file. Added Header and Footer. Added footer link to github repo. Started adding classes to div tags

--- a/index.html
+++ b/index.html
@@ -16,6 +16,32 @@
 </head>
 
 <body>
+    <header class="header text-center">
+        <h1>Weather Report</h1>
+        <div id="currentDay" class="text-center"></div>
+    </header>
+    <div class="container" style="max-width: 90%;">
+        <div class="row">
+            <div class="col-sm-12 col-lg-4 bg-light">
+                <div>
+                    <p><h3>City Search</h3></p>
+                </div>
+                <div class="input-group mb-3">
+                    <div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <nav class="footer">
+        <footer class="text-center">
+            <h3>Weather Report</h3>
+            <div class="footer-text">
+                <a href="https://github.com/brackenluke/weather-report">GitHub Repo</a>
+            </div>
+        </footer>
+    </nav>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
     <script src="./assets/script.js"></script>
