--- a/index.html
+++ b/index.html
@@ -27,16 +27,28 @@
                     <p><h3>City Search</h3></p>
                 </div>
                 <div class="input-group mb-3">
-                    <div>
+                    <input id="city-input" type="text" class="form-control"
+                    placeholder="Enter City Name" aria-label="Enter city name">
+                    
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" id="search-button">
+                            <i class="fas fa-search"></i>
+                        </button>
                         
                     </div>
+
+                    <button class="btn md-3" type="button" id="clear-history">Clear History</button>
+
+                    <p><h4>Recently searched cities:</h4></p>
+
+                    <ul class="is-hidden" style="list-style: none;" id="historyList"></ul>
                 </div>
             </div>
         </div>
     </div>
     <nav class="footer">
         <footer class="text-center">
-            <h3>Weather Report</h3>
+            <h4>Weather Report</h4>
             <div class="footer-text">
                 <a href="https://github.com/brackenluke/weather-report">GitHub Repo</a>
             </div>
