--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-sm-12 col-lg-4 bg-light">
                 <div>
-                    <p><h3>City Search</h3></p>
+                    <p><h2>City Search</h2></p>
                 </div>
                 <div class="input-group mb-3">
                     <input id="city-input" type="text" class="form-control"
@@ -39,10 +39,37 @@
 
                     <button class="btn md-3" type="button" id="clear-history">Clear History</button>
 
-                    <p><h4>Recently searched cities:</h4></p>
+                    <p><h6>Recently searched cities:</h6></p>
 
                     <ul class="is-hidden" style="list-style: none;" id="historyList"></ul>
                 </div>
+                <div class="col-sm-12 col-lg-8">
+                    <div class="row mr-0">
+                        <div class="col-sm-12 m-3 rounded">
+                            <div class="row">
+                                <div class="col-sm-12 col-lg-8">
+                                    <span id="city-name" class="city-name align-middle"></span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-12 box">
+                                <div id="cityList">
+                                    <h2>City Name:</h2>
+                                </div>
+                                
+                                <div class="col-md-4"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                        <div class="col-10 list">
+                            <h3>5-Day Forecast</h3>
+                        </div>
+                    </div>
+                    <div class="row" id="days"></div>
             </div>
         </div>
     </div>
