Updated README file. Added description and application instructions.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="row">
                     <div class="col-10 list">
-                        <h3>5-Day Forecast</h3>
+                        <h3>Five Day Forecast</h3>
                     </div>
                 </div>
                 <div class="row" id="days"></div>
